--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 click==6.7
+coverage==4.5.1
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+nose2==0.7.3
 pkg-resources==0.0.0
+six==1.11.0
 Werkzeug==0.14.1
