--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
 coverage==4.5.1
 Flask==0.12.2
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 nose2==0.7.3
 pkg-resources==0.0.0
+psycopg2==2.7.4
+psycopg2-binary==2.7.4
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
 Werkzeug==0.14.1
